<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/title_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/title_settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="40sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/settings_currency_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/settings_currency_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/settings_currency_title"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/currency_button_us_dollar"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:text="@string/currency_us_dollar"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/currency_button_euro"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:text="@string/currency_euro"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/currency_button_yen"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:text="@string/currency_yen"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/currency_button_sterling"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:text="@string/currency_sterling"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/currency_button_renminbi"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:text="@string/currency_renminbi"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/currency_button_aus_dollar"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:text="@string/currency_aus_dollar"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/currency_button_canadian_dollar"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:text="@string/currency_canadian_dollar"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/currency_button_swiss_dollar"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:text="@string/currency_swiss_franc"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/currency_button_hk_dollar"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:text="@string/currency_hk_dollar"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/currency_button_sg_dollar"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:text="@string/currency_sg_dollar"
                    android:textColor="@color/white" />

            </RadioGroup>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>