<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/border_item_edit_fee"
    android:layout_width="375dp"
    android:layout_height="120dp"
    android:layout_margin="8dp"
    android:elevation="8dp">

    <TextView
        android:id="@+id/edit_fee_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/edit_fee_title_default"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_fee_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.504" />

    <TextView
        android:id="@+id/edit_fee_category"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_fee_category_default"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_fee_button"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toEndOf="@+id/edit_fee_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_fee_cost"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_fee_cost_default"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_fee_button"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toEndOf="@+id/edit_fee_category"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.504" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_fee_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_rounded_button_green"
        android:text="@string/edit_fee_button_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>